--- a/dom/1.html
+++ b/dom/1.html
@@ -7,9 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="1">1</div>
+    <div id="2">2</div>
+
     <script>
-        var name = prompt("请输入您的姓名？")
-        alert(`Hello,${name}`)
+        var a = document.getElementById('1');
+        console.log(a,typeof(a))
+        
+        //显示一个对象的所有属性和方法
+        console.dir(a)
     </script>
 </body>
+
 </html>
